--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -45,6 +45,38 @@
             android:entries="@array/pref_notify_band_options" />
     </PreferenceScreen>
 
+    <PreferenceScreen
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:title="@string/pref_filters_label"
+        android:key="@string/pref_filters_key" >
+
+        <EditTextPreference
+            android:title="@string/pref_filter_label_tx_callsign"
+            android:key="@string/pref_filter_key_tx_callsign"
+            android:summary="@string/pref_filter_summary_tx_callsign"
+            android:defaultValue="" />
+        <EditTextPreference
+            android:title="@string/pref_filter_label_rx_callsign"
+            android:dialogTitle="@string/pref_filters_wildcards"
+            android:key="@string/pref_filter_key_rx_callsign"
+            android:summary="@string/pref_filter_summary_rx_callsign"
+            android:defaultValue="" />
+
+        <EditTextPreference
+            android:title="@string/pref_filter_label_tx_gridsquare"
+            android:dialogTitle="@string/pref_filters_wildcards"
+            android:key="@string/pref_filter_key_tx_gridsquare"
+            android:summary="@string/pref_filter_summary_tx_gridsquare"
+            android:defaultValue="" />
+        <EditTextPreference
+            android:title="@string/pref_filter_label_rx_gridsquare"
+            android:dialogTitle="@string/pref_filters_wildcards"
+            android:key="@string/pref_filter_key_rx_gridsquare"
+            android:summary="@string/pref_filter_summary_rx_gridsquare"
+            android:defaultValue="" />
+    </PreferenceScreen>
+
     <ListPreference
         android:title="@string/pref_recent_label"
         android:key="@string/pref_recent_key"
