--- a/app/src/main/res/layout/list_item_wspr.xml
+++ b/app/src/main/res/layout/list_item_wspr.xml
@@ -51,7 +51,7 @@
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:layout_weight="4"
+        android:layout_weight="5"
         android:orientation="vertical">
 
         <LinearLayout
@@ -102,6 +102,60 @@
                 android:textStyle="bold"
                 android:layout_weight="4"
                 android:gravity="left" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/list_item_txcallsign_label_textview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:text="tx:"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textColor="#ff804000" />
+            <TextView
+                android:id="@+id/list_item_txcallsign_textview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="W1ABC"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:typeface="monospace"
+                android:textStyle="bold"
+                android:layout_weight="4"
+                android:gravity="left"
+                android:textColor="#ff804000" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/list_item_rxcallsign_label_textview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:text="rx:"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:textColor="#ff804000" />
+            <TextView
+                android:id="@+id/list_item_rxcallsign_textview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="T5/T61AA"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:typeface="monospace"
+                android:textStyle="bold"
+                android:layout_weight="4"
+                android:gravity="left"
+                android:textColor="#ff804000" />
         </LinearLayout>
 
     </LinearLayout>
@@ -160,5 +214,30 @@
                 android:textAppearance="?android:textAppearanceSmall"
                 android:layout_weight="2" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/list_item_distance_textview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="925"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:typeface="monospace"
+                android:textStyle="bold"
+                android:layout_weight="4"
+                android:gravity="right" />
+            <TextView
+                android:id="@+id/list_item_distance_label_textview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:text=" km"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:layout_weight="2" />
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
