Added additional notification settings and notification filtering. Notifications are now only applied to WSPRs with a time stamp in the update interval.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -83,6 +83,7 @@
 
     
     <string-array name="pref_notify_band_options">
+        <item>@string/pref_band_label_any</item>
         <item>@string/pref_band_label_LF</item>
         <item>@string/pref_band_label_MF</item>
         <item>@string/pref_band_label_160m</item>
@@ -102,6 +103,7 @@
     </string-array>
 
     <string-array name="pref_notify_band_values">
+        <item>@string/pref_band_value_any</item>
         <item>@string/pref_band_value_LF</item>
         <item>@string/pref_band_value_MF</item>
         <item>@string/pref_band_value_160m</item>
