--- a/app/src/main/res/layout/propagation_maps_filters_wavelength_dialog.xml
+++ b/app/src/main/res/layout/propagation_maps_filters_wavelength_dialog.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,31 +25,39 @@
             <View style="@style/Divider" />
             <View style="@style/Divider" />
 
-            <CheckBox
-                android:id="@+id/propagation_maps_filter_wavelength_all"
+            <!-- For propagationMapsFragment.java:onPropagationMapFiltersView() to work properly,
+                 the CheckBoxes must be contained within the GridLayout. -->
+            <android.support.v7.widget.GridLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:focusable="true"
-                android:padding="4dip"
-                android:text="@string/string_select_all"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                />
+                android:id="@+id/propagation_maps_filter_wavelength_gridView"
+                app:columnCount="3">
 
-            <CheckBox
-                android:id="@+id/propagation_maps_filter_wavelength_none"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:focusable="true"
-                android:padding="4dip"
-                android:text="@string/string_select_none"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:layout_toRightOf="@id/propagation_maps_filter_wavelength_all"
-                />
+                <CheckBox
+                    android:id="@+id/propagation_maps_filter_wavelength_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:focusable="true"
+                    android:padding="4dip"
+                    android:text="@string/string_select_all"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    />
 
+                <CheckBox
+                    android:id="@+id/propagation_maps_filter_wavelength_none"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:focusable="true"
+                    android:padding="4dip"
+                    android:text="@string/string_select_none"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    android:layout_toRightOf="@id/propagation_maps_filter_wavelength_all"
+                    />
+
+            </android.support.v7.widget.GridLayout>
 
         </LinearLayout>
-
 </ScrollView>
 
