--- a/app/src/main/res/layout/propagation_maps_settings_dialog.xml
+++ b/app/src/main/res/layout/propagation_maps_settings_dialog.xml
@@ -14,33 +14,28 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/propagation_maps_settings_label_map_type"
             />
-        <LinearLayout
+        <RadioGroup
+            android:id="@+id/propagation_maps_settings_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <RadioGroup
-                android:id="@+id/propagation_maps_settings_type"
+            <RadioButton
+                android:id="@+id/propagation_maps_settings_type_great_circle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                >
-                <RadioButton
-                    android:id="@+id/propagation_maps_settings_type_heat"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/propagation_maps_settings_label_heat"
-                    android:tag="@string/pref_maps_settings_key_map_type_heat"
-                    android:checked="true"
-                    />
-                <RadioButton
-                    android:id="@+id/propagation_maps_settings_type_great_circle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/propagation_maps_settings_label_great_circle"
-                    android:tag="@string/pref_maps_settings_key_map_type_great_circle"
-                    />
-            </RadioGroup>
-        </LinearLayout>
+                android:text="@string/propagation_maps_settings_label_great_circle"
+                android:tag="@string/pref_maps_settings_key_map_type_great_circle"
+                android:checked="true"
+                />
+            <RadioButton
+                android:id="@+id/propagation_maps_settings_type_heat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/propagation_maps_settings_label_heat"
+                android:tag="@string/pref_maps_settings_key_map_type_heat"
+                android:checked="false"
+                />
+        </RadioGroup>
         <View style="@style/Divider" />
 
         <TextView
@@ -49,24 +44,68 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/pref_maps_settings_markers_label"
             />
-        <CheckBox
-            android:id="@+id/propagation_maps_settings_markers_tx"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:focusable="true"
-            android:paddingTop="4dip"
-            android:tag="@string/pref_maps_settings_markers_tx_key"
-            android:text="@string/string_tx"
-            android:textAppearance="?android:textAppearanceMedium" />
-        <CheckBox
-            android:id="@+id/propagation_maps_settings_markers_rx"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/propagation_maps_settings_markers_tx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="true"
+                android:paddingTop="4dip"
+                android:tag="@string/pref_maps_settings_markers_tx_key"
+                android:text="@string/string_tx"
+                android:textAppearance="?android:textAppearanceMedium" />
+            <CheckBox
+                android:id="@+id/propagation_maps_settings_markers_rx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="true"
+                android:paddingTop="4dip"
+                android:tag="@string/pref_maps_settings_markers_rx_key"
+                android:text="@string/string_rx"
+                android:textAppearance="?android:textAppearanceMedium" />
+        </LinearLayout>
+
+        <View style="@style/Divider" />
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:focusable="true"
-            android:paddingTop="4dip"
-            android:tag="@string/pref_maps_settings_markers_rx_key"
-            android:text="@string/string_rx"
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/pref_maps_settings_label_max_items"
+            />
+        <RadioGroup
+            android:id="@+id/propagation_maps_settings_max_items"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"  >
+            <RadioButton
+                android:id="@+id/propagation_maps_settings_max_items_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/string_select_all"
+                android:tag="@string/pref_maps_settings_key_max_items_all"
+                android:checked="false"
+                />
+            <RadioButton
+                android:id="@+id/propagation_maps_settings_max_items_250"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="250"
+                android:tag="@string/pref_maps_settings_key_max_items_250"
+                android:checked="false"
+                />
+            <RadioButton
+                android:id="@+id/propagation_maps_settings_max_items_50"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="50"
+                android:tag="@string/pref_maps_settings_key_max_items_50"
+                android:checked="false"
+                />
+        </RadioGroup>
 
     </LinearLayout>
 </ScrollView>
