--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,4 +39,7 @@
     <style name="WsprTextAppearanceLarge">
         <item name="android:textAppearance">?android:textAppearanceLarge</item>
     </style>
+    <style name="WsprTextAppearanceMedium">
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+    </style>
 </resources>
