--- a/app/src/main/res/values-large/refs.xml
+++ b/app/src/main/res/values-large/refs.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="main" type="layout">@layout/fragment_detail_wide</item>
+    <item type="layout" name="fragment_detail">@layout/fragment_detail_wide</item>
 </resources>
